# Physics_Lab

./: .gitignore  main.py  pyproject.toml  setup.py
Pulse_NMR_61/: README.md  main_json.py
Pulse_NMR_61/Plots/T2/: T2_0.125 para.eps  T2_0.25 para.eps  T2_0.5 para.eps  T2_1 para.eps  T2_2 para.eps  T2_4 para.eps  T2_8 para.eps  T2_glycerine.eps  T2_water.eps
Pulse_NMR_61/Plots/T2/Peaks/: peaks_for_0.125 para.eps  peaks_for_0.25 para.eps  peaks_for_0.5 para.eps  peaks_for_1 para.eps  peaks_for_2 para.eps  peaks_for_4 para.eps  peaks_for_8 para.eps  peaks_for_glycerine.eps  peaks_for_water.eps
Pulse_NMR_61/Plots/T2_eff/T2_eff_against_T2/: Magnetic_field_variance.eps
Pulse_NMR_61/Plots/T2_eff/eps/: root_T2_Eff_0.125 para.eps  root_T2_Eff_0.25 para.eps  root_T2_Eff_0.5 para.eps  root_T2_Eff_1 para.eps  root_T2_Eff_2 para.eps  root_T2_Eff_4 para.eps  root_T2_Eff_8 para.eps  root_T2_Eff_glycerine.eps  root_T2_Eff_water.eps
Pulse_NMR_61/analysing_data/: magnetic_field_analysis.py  results.csv  t1_analysis.py  t2_analysis.py  t2_analysis_peaks.py  t2_eff_analysis.py
Pulse_NMR_61/create_databases/: T1_Data.json  all_T.csv  create_T1_database.py  create_T2_database.py  create_T2_eff_database.py  create_all_T_csv.py  magnetic_field_std.json
utils/: README.md  pandas_tools.py  root_tools.py
