[project]
name = "lab-c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "uncertainties>=3.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
